--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -51,14 +51,17 @@ p {
     margin-right : auto;
     padding-left : 10px;
     padding-right: 10px;
-
+background-color: burlywood;
     @media screen and (min-width: 320px) {
+       background-color: orange;
         width: 300px;
     }
     @media screen and (min-width: 768px) {
+        background-color: green;
         width: 720px;
     }
     @media screen and (min-width: 1024px) {
+        background-color: gray;
         width: 960px;
         padding-left: 15px;
         padding-right: 15px;
@@ -80,6 +83,6 @@ img {
 h1{
     color:aqua;
     text-align: center;
-font-size: 64px;
+font-size: 30px;
 margin-top: 20px;
 }
