--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,7 +1,7 @@
 @import './common';
 // @import './example';
 @import './base/base';
-@import './components/header-futer.scss';
+@import './components/header.scss';
 @import './components/home-page.scss';
 @import './components/libruary-page.scss';
 @import './components/search-film.scss';
@@ -9,3 +9,4 @@
 @import './components/modal-card.scss';
 @import './components/modal-futer.scss';
 @import './components/loader.scss';
+@import './components/footer';
