--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,3 +2,9 @@
 <!-- <div class="container">
   <h1>JS-PROGEKT</h1>  
 </div> -->
+
+<header>
+  <div>
+    <h1>Hello World</h1>
+  </div>
+</header>
