--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,4 @@
 
-<!-- <div class="container">
-  <h1>JS-PROGEKT</h1>  
-</div> -->
 
 <header class="js-header header" id="home">
   <h1 hidden>Filmoteka</h1>
@@ -9,7 +6,7 @@
     <nav class="nav-container">
       <a class="js-logo logo-link" href="">
         <svg class="logo-img" width="24" height="24">
-          <use href="./images/film.svg"></use>
+          <use href="images/film.svg"></use>
         </svg>
         <span class="logo-text">Filmoteka</span>
       </a>
@@ -23,7 +20,7 @@
       <input class="search-form-input" type="text" name="searchQuery" autocomplete="off" placeholder="Поиск фильмов">
       <button class="search-form-button" type="submit">
         <svg class="search-form-icon" width="12" height="12" aria-label="Search films button">
-          <use href="./images/search.svg"></use>
+          <use href="images/search.svg"></use>
         </svg>
       </button>
     </form>
