--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,13 @@
 
-
 <header class="js-header header" id="home">
   <h1 hidden>Filmoteka</h1>
   <div class="js-header-container header-container">
     <nav class="nav-container">
-      <a class="js-logo logo-link" href="">
-        <svg class="logo-img" width="24" height="24">
-          <use href="images/film.svg"></use>
-        </svg>
+      <a class="js-logo logo-link" href="#">
+        <img class="logo-img" src="images/film.svg" alt="logo" width="24" height="24">
+        <!-- <svg class="logo-img" width="24" height="24">
+          <use href="./images/film.svg"  ></use>
+        </svg> -->
         <span class="logo-text">Filmoteka</span>
       </a>
       <ul class="js-menu nav-menu">
@@ -19,9 +19,10 @@
     <form class="js-submit search-form" id="search-form">
       <input class="search-form-input" type="text" name="searchQuery" autocomplete="off" placeholder="Поиск фильмов">
       <button class="search-form-button" type="submit">
-        <svg class="search-form-icon" width="12" height="12" aria-label="Search films button">
-          <use href="images/search.svg"></use>
-        </svg>
+        <img class="search-form-ico" src="images/search.svg" alt="search" aria-label="Search films button width="12" height="12">
+        <!-- <svg class="search-form-icon" width="12" height="12" aria-label="Search films button">
+          <use href="./images/search.svg"></use>
+        </svg> -->
       </button>
     </form>
 
