--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 
 <header class="js-header header" id="home">
   <h1 hidden>Filmoteka</h1>
-  <div class="js-header-container header-container">
+  <div class="js-header-container container">
     <nav class="nav-container">
       <a class="js-logo logo-link" href="#">
         <img class="logo-img" src="images/film.svg" alt="logo" width="24" height="24">
