--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,14 +5,11 @@
     <nav class="nav-container">
       <a class="js-logo logo-link" href="#">
         <img class="logo-img" src="images/film.svg" alt="logo" width="24" height="24">
-        <!-- <svg class="logo-img" width="24" height="24">
-          <use href="./images/film.svg"  ></use>
-        </svg> -->
         <span class="logo-text">Filmoteka</span>
       </a>
       <ul class="js-menu nav-menu">
-        <li class="nav-menu-item"><a data-link="home" href="" class="nav-menu-link current-page">Home</a></li>
-        <li class="nav-menu-item"><a data-link="library" href="" class="nav-menu-link">My library</a></li>
+        <li class="nav-menu-item"><a data-link="home" href="#" class="nav-menu-link current-page">Home</a></li>
+        <li class="nav-menu-item"><a data-link="library" href="#" class="nav-menu-link">My library</a></li>
       </ul>
     </nav>
 
@@ -20,9 +17,6 @@
       <input class="search-form-input" type="text" name="searchQuery" autocomplete="off" placeholder="Поиск фильмов">
       <button class="search-form-button" type="submit">
         <img class="search-form-ico" src="images/search.svg" alt="search" aria-label="Search films button width="12" height="12">
-        <!-- <svg class="search-form-icon" width="12" height="12" aria-label="Search films button">
-          <use href="./images/search.svg"></use>
-        </svg> -->
       </button>
     </form>
 
