--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -5,16 +5,6 @@
     background-size: cover;
     padding-top: 45px;
     padding-bottom: 80px;
-    // height: 230px;
-    // background-color: #252525;
-    // background-repeat: no-repeat;
-}
-
-.header-container {
-    // display: flex;
-    // max-width: 1024px;
-    // margin: 0 auto;
-    // padding: 40px 20px 90px 20px;
 }
 
 .nav-container {
@@ -77,26 +67,16 @@ display: flex;
 .search-form {
     position: relative;
     display: flex;
-    justify-content: space-between;
     max-width: 336px;
     height: 20px;
     margin: 0 auto;
-    padding-bottom: 5px;
-}
-
-.search-form::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 0.5px;
-    background-color: white;
 }
 
 .search-form-input {
     width: 100%;
-    border: 0;
+    border-top: 0;
+    border-left:0;
+    border-right:0;
     color: white;
     font-size: 14px;
     font-weight: 400;
@@ -117,10 +97,12 @@ display: flex;
 }
 
 .search-form-button {
+    height: 100%;
+    position: absolute;
+    top:0;
+    right: 0;
     border: 0;
     background-color: transparent;
-    // border: 1px dashed #ddd;
-
     cursor: pointer;
 }
 
