--- a/src/partials/home-page.html
+++ b/src/partials/home-page.html
@@ -5,5 +5,6 @@
         <h1 class="visually-hidden">Film-gallery</h1>
         <ul class="collection"></ul>
       </div>
+      <div id="tui-pagination-container" class="tui-pagination"></div>
     </div>
 </section>
