--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,13 +1,10 @@
 <footer>
-  <div class="container__footer">
-    <div class="footer__firstline">
-      <p class="footer__rights">© 2020 | All Rights Reserved |</p>
-    </div>
-    <div class="footer__team">
-      <p>Developed with</p>
+  <div class="container__footer container">
+    
+      <p class="footer__rights">© 2020 | All Rights Reserved | Developed with</p>
       <i class="footer__item">heart</i>
       <p>by</p>
       <a class="footer__modal" href="#">GoIT Students</a>
-    </div>
+  
   </div>
 </footer>
