--- a/src/partials/home-page.html
+++ b/src/partials/home-page.html
@@ -1,9 +1,9 @@
-<section class="section">
+<section class="section container">
     <h1 class="visually-hidden">Киногалерея</h1>
     <div class="gallery">
-      <div class="container">
+    
         <h1 class="visually-hidden">Film-gallery</h1>
         <ul class="collection"></ul>
-      </div>
+      
     </div>
 </section>
