--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,10 +1,12 @@
 <footer>
   <div class="container__footer container">
     
-      <p class="footer__rights">© 2020 | All Rights Reserved | Developed with</p>
-      <i class="footer__item">heart</i>
-      <p>by</p>
-      <a class="footer__modal" href="#">GoIT Students</a>
-  
+      <p class="footer__rights">© 2020 | All Rights Reserved |</p> 
+      <div class="footer__group">
+      <p class="footer__rights">Developed with </p> 
+      <img class="footer__item" src="images/hearth.svg" alt="hearth" width="14" height="13">
+      by <a class="footer__modal" href="#">GoIT Students</a>
+      </div>
+     
   </div>
 </footer>
