Header layaut & js

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,7 +2,7 @@
 // @import './example';
 @import './base/base';
 @import './utils/variables';
-@import './components/header.scss';
+@import './components/_header.scss';
 @import './components/home-page.scss';
 @import './components/libruary-page.scss';
 @import './components/search-film.scss';
