--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,28 +1,66 @@
-
 <header class="js-header header" id="home">
   <h1 hidden>Filmoteka</h1>
-  <div class="js-header-container container">
-    <nav class="nav-container">
-      <a class="js-logo logo-link" href="#">
-        <img class="logo-img" src="images/film.svg" alt="logo" width="24" height="24">
-        <span class="logo-text">Filmoteka</span>
+  <section
+    class="js-header-container header__container header__home-padding header__home-bg"
+  >
+    <!-- Nav Bar -->
+    <nav class="nav nav__home-margin">
+      <a class="js-logo nav__logo" href="">
+        <img
+          class="nav__logo-img"
+          src="./images/film.svg"
+          alt="Logo"
+          width="24"
+          height="24"
+          aria-label="Logo"
+        />
+        <span class="nav__logo-text">Filmoteka</span>
       </a>
-      <ul class="js-menu nav-menu">
-        <li class="nav-menu-item"><a data-link="home" href="#" class="nav-menu-link current-page">Home</a></li>
-        <li class="nav-menu-item"><a data-link="library" href="#" class="nav-menu-link">My library</a></li>
+      <ul class="js-menu nav__list">
+        <li class="nav__item">
+          <a data-link="home" href="" class="nav__link current-page">Home</a>
+        </li>
+        <li class="nav__item">
+          <a data-link="library" href="" class="nav__link">My library</a>
+        </li>
       </ul>
     </nav>
 
-    <form class="js-submit search-form" id="search-form">
-      <input class="search-form-input" type="text" name="searchQuery" autocomplete="off" placeholder="Поиск фильмов">
-      <button class="search-form-button" type="submit">
-        <img class="search-form-ico" src="images/search.svg" alt="search" aria-label="Search films button width="12" height="12">
+    <!-- Films Search Form -->
+    <form class="js-submit form" id="search-form">
+      <input
+        class="form__input"
+        type="text"
+        name="searchQuery"
+        autocomplete="off"
+        placeholder="Поиск фильмов"
+      />
+      <button class="form__button" type="submit">
+        <img
+          src="./images/search.svg"
+          alt="Search films icon"
+          width="12"
+          height="12"
+          aria-label="Search films button"
+        />
       </button>
     </form>
 
-    <ul class="librari-list">
-      <li class="library-item"><button class="js-watched-btn library-item-btn active-btn" type="button">Watched</button></li>
-      <li class="library-item"><button class="js-queue-btn library-item-btn" type="button">Queue</button></li>
+    <!-- Header Library Buttons -->
+    <ul class="js-librari-list library is-hidden">
+      <li class="library__item">
+        <button
+          class="js-watched-btn library__item-btn active-btn"
+          type="button"
+        >
+          Watched
+        </button>
+      </li>
+      <li class="library__item">
+        <button class="js-queue-btn library__item-btn" type="button">
+          Queue
+        </button>
+      </li>
     </ul>
-  </div>
+  </section>
 </header>
