--- a/src/partials/home-page.html
+++ b/src/partials/home-page.html
@@ -1,9 +1,9 @@
-<section class="section container">
+<section class="container">
     <!-- <h1 class="visually-hidden">Киногалерея</h1> -->
     <div class="gallery">
     
-        <!-- <h1 class="visually-hidden">Film-gallery</h1>
-        <ul class="collection"></ul> -->
+        <!-- <h1 class="visually-hidden">Film-gallery</h1> -->
+        <ul class="collection"></ul>
 
       </div>
       <div id="tui-pagination-container" class="tui-pagination"></div>
