--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -49,8 +49,8 @@ p {
     width: 100%;
     margin-left  : auto;
     margin-right : auto;
-    padding-left : 10px;
-    padding-right: 10px;
+    // padding-left : 10px;
+    // padding-right: 10px;
 
     @media screen and (min-width: 320px) {
        
@@ -63,8 +63,8 @@ p {
     @media screen and (min-width: 1024px) {
        
         width: 960px;
-        padding-left: 15px;
-        padding-right: 15px;
+        // padding-left: 15px;
+        // padding-right: 15px;
     }
 }
 
