--- a/src/sass/components/_my-render.scss
+++ b/src/sass/components/_my-render.scss
@@ -2,7 +2,8 @@
   display:flex;
   flex-wrap: wrap;
   padding-top:30px;
-  margin-left: -16px;
+  justify-content: space-between;
+//   margin-left: -16px;
 }
 .post{
   text-decoration: none;
@@ -10,7 +11,7 @@
   padding-bottom: 32px;
 }
 .post{
-  margin-left: 16px;
+//   margin-left: 16px;
 }
 .post:visited,
 .post:hover {
@@ -29,9 +30,17 @@
   transform: scale(1.07);
 }
 .thumb {
-  width: 309px;
-  height: 489px;
+  width: 280px;
+ 
   object-fit: cover;
+     @media screen and (min-width: 768px) {
+       
+        width: 336px;
+    }
+       @media screen and (min-width: 1024px) {
+       
+        width: 309px;
+    }
 }
 .img-content{
   display: block;
@@ -43,7 +52,7 @@
 .info{
   display: flex;
  justify-content: space-between;
-  padding: 15px;
+  padding-top: 8px;
 }
 
 .info-item{
@@ -51,4 +60,17 @@
   flex-direction: column;
   align-items: center;
   margin: 0;
+}
+.poster{
+    width: 100%;
+    height: 85%;
+    border-radius: 5px;
+}
+.movie-title{
+    font-family: 'Roboto';
+font-style: normal;
+    font-weight: 500;
+font-size: 12px;
+line-height: 1.3;
+color: #000000;
 }
