--- a/src/partials/home-page.html
+++ b/src/partials/home-page.html
@@ -1,11 +1,13 @@
 <section class="container">
     <!-- <h1 class="visually-hidden">Киногалерея</h1> -->
-    <div class="gallery">
+    
     
         <!-- <h1 class="visually-hidden">Film-gallery</h1> -->
-        <ul class="collection"></ul>
+        <ul class="gallery">
+          
+        </ul>
 
-      </div>
+      
       <div id="tui-pagination-container" class="tui-pagination"></div>
 
     </div>
