--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,11 +1,17 @@
 <footer>
-  <div class="container__footer">
+  <div class="container__footer container">
     <div class="footer__firstline">
       <p class="footer__rights">© 2020 | All Rights Reserved |</p>
     </div>
     <div class="footer__team">
       <p>Developed with</p>
-      <i class="footer__item">heart</i>
+      <img
+        class="footer__item"
+        src="images/symbol-defs.svg"
+        alt="heart"
+        width="14"
+        height="12.75"
+      />
       <p>by</p>
       <a class="footer__modal" href="#">GoIT Students</a>
     </div>
