--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -6,33 +6,51 @@ footer {
   margin-top: auto;
 }
 .container__footer {
-  //   display: flex;
   align-items: center;
-  justify-content: center;
   margin-left: auto;
   margin-right: auto;
   color: #545454;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.14;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 16px;
+    line-height: 1.17;
+  }
 }
+
 .footer__firstline {
-  //   display: flex;
   align-items: center;
-  justify-content: center;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: center;
+  }
 }
+
 .footer__rights {
-  position: relative;
+  margin: 0;
   display: flex;
   justify-content: center;
+  padding-bottom: 10px;
+  @media screen and (min-width: 768px) {
+    padding-bottom: 0;
+    padding-right: 3px;
+  }
 }
 .footer__team {
+  position: relative;
+  margin: 0;
   display: flex;
   justify-content: center;
 }
 .footer__item {
   padding-left: 10px;
   padding-right: 10px;
+  color: #ff6b08;
 }
 .footer__modal {
   padding-left: 10px;
