--- a/src/sass/components/home-page.scss
+++ b/src/sass/components/home-page.scss
@@ -18,55 +18,82 @@
   }
 }
 
-.collection > .movie-card {
-  @media screen and (min-width: 320px) {
-    margin-bottom: 20px;
-  }
- 
+.gallery {
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding-top:20px;
+  padding-bottom: 40px;
+
   @media screen and (min-width: 768px) {
-    display: flex;
-    flex-direction: column;
-    flex-basis: calc(50% - 32px);
-    width: 335px;
-    margin-left: 32px;
-    margin-top: 32px;
-  }
-
-  @media screen and (min-width: 1024px) {
-    flex-basis: calc(33.33333% - 16px);
-    width: 309px;
-    margin-left: 16px;
+    padding-top: 60px;
+    padding-bottom: 60px;
   }
 }
 
-.movie-link {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
+.post{
+  text-decoration: none;
+  color: inherit;
+  margin-bottom: 20px;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 32px;
+  }
 }
 
-.poster-thumb {
-  border-radius: 5px;
-  overflow: hidden;
-  flex-grow: 1;
+.photo-card {
+  background-color: #fff;
+  border-radius: 10px;
+  // box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  transition: transform 250ms linear;
+  cursor: pointer;
+}
+
+.photo-card:hover {
+  transform: scale(1.07);
+}
+
+.thumb {
+  width: 280px;
+ 
+  object-fit: cover;
+     @media screen and (min-width: 768px) {
+       
+        width: 336px;
+    }
+       @media screen and (min-width: 1024px) {
+       
+        width: 309px;
+    }
 }
 
 .poster {
   width: 100%;
-  height: 100%;
+  height: 85%;
+  border-radius: 5px;
 }
 
 .movie-info {
   transform: scale(1);
   transition: transform .25s linear;
-  padding-top: 8px;
+  padding-top: 10px;
+
+  @media screen and (min-width: 768px) {
+       
+    padding-top: 8px;
+  }
 }
 
 .movie-description, 
 .movie-title {
+  text-align: left;
   font-weight: 500;
   font-size: 12px;
   line-height: 16px;
+}
+
+.movie-title {
+  text-transform: uppercase;
 }
 
 .movie-description {
