--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -12,4 +12,4 @@
 @import './components/loader.scss';
 @import './components/footer';
 @import './components/pagination';
-@import './components/my-render';
+// @import './components/my-render';
