--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -13,3 +13,4 @@
 @import './components/footer';
 @import './components/pagination';
 @import './components/my-render';
+@import './components/dark-theme';
