--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,6 +3,9 @@
   <section
     class="js-header-container header__container header__home-padding header__home-bg"
   >
+
+    <!-- Dark theme component -->
+    <include src="./partials/dark-theme.html"></include>
     <!-- Nav Bar -->
     <nav class="nav nav__home-margin">
       <a class="js-logo nav__logo" href="">
