--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="container__footer container">
 
-    <div class="footer__firstline">
+    <!-- <div class="footer__firstline">
       <p class="footer__rights">© 2020 | All Rights Reserved |</p>
     </div>
     <div class="footer__team">
@@ -15,7 +15,7 @@
       />
       <p>by</p>
       <a class="footer__modal" href="#">GoIT Students</a>
-    </div>
+    </div> -->
 
     
       <p class="footer__rights">© 2020 | All Rights Reserved |</p> 
