--- a/src/partials/home-page.html
+++ b/src/partials/home-page.html
@@ -1,9 +1,7 @@
+
 <section class="container">
 
-        <ul class="gallery">
-          
-        </ul>
-
+    <ul class="gallery"></ul> 
     <div id="tui-pagination-container" class="tui-pagination"></div>
 
 </section>
