--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,5 @@
 <footer>
   <div class="container__footer container">
-
     <!-- <div class="footer__firstline">
       <p class="footer__rights">© 2020 | All Rights Reserved |</p>
     </div>
@@ -17,14 +16,24 @@
       <a class="footer__modal" href="#">GoIT Students</a>
     </div> -->
 
-    
-      <p class="footer__rights">© 2020 | All Rights Reserved |</p> 
-      <div class="footer__group">
-      <p class="footer__rights">Developed with </p> 
-      <img class="footer__item" src="images/hearth.svg" alt="hearth" width="14" height="13">
-      by <a class="footer__modal" href="#">GoIT Students</a>
-      </div>
-     
-
+    <p class="footer__rights">© 2020 | All Rights Reserved |</p>
+    <div class="footer__group">
+      <p class="footer__rights">Developed with</p>
+      <img
+        class="footer__item"
+        src="images/hearth.svg"
+        alt="hearth"
+        width="14"
+        height="13"
+      />
+      <p class="footer__rights">by</p>
+      <a class="footer__modal footer__rights" href="#">GoIT Students</a>
+    </div>
   </div>
 </footer>
+<!-- <div class="footer__modal--basis">
+  <div class="footer__modal--container container">
+    <div class="footer__modal--body"></div>
+    <button type="button" class="footer__modal--btnClose"></button>
+  </div>
+</div> -->
