--- a/src/partials/home-page.html
+++ b/src/partials/home-page.html
@@ -1,8 +1,8 @@
-
+<main>
 <section class="container">
 
     <ul class="gallery"></ul> 
     <div id="tui-pagination-container" class="tui-pagination"></div>
 
 </section>
-
+</main>
