--- a/src/partials/home-page.html
+++ b/src/partials/home-page.html
@@ -1,5 +1,5 @@
 <main>
-<section class="container">
+<section class="card-movies container">
 
     <ul class="gallery"></ul> 
     <div id="tui-pagination-container" class="tui-pagination"></div>
