--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -49,20 +49,20 @@ p {
     width: 100%;
     margin-left  : auto;
     margin-right : auto;
-    // padding-left : 10px;
-    // padding-right: 10px;
+    padding-left : 20px;
+    padding-right: 20px;
 
     @media screen and (min-width: 320px) {
-       
-        width: 300px;
+
+        width: 320px;
     }
     @media screen and (min-width: 768px) {
        
-        width: 720px;
+        width: 760px;
     }
     @media screen and (min-width: 1024px) {
        
-        width: 960px;
+        width: 1024px;
         // padding-left: 15px;
         // padding-right: 15px;
     }
