--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,6 +1,35 @@
 .header {
-  width: 100%;
+  // width: 100%;
+  
+&__home-bg {
+   
+    background-image: linear-gradient(
+        to right,
+        rgba(0, 0, 0, 0.56),
+        rgba(0, 0, 0, 0.56)
+      ),
+      url(../images/hero-home-mobile.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 
+    @media screen and (min-width: 768px) {
+      background-image: linear-gradient(
+          to right,
+          rgba(0, 0, 0, 0.56),
+          rgba(0, 0, 0, 0.56)
+        ),
+        url(../images/hero-home-tablet.jpg);
+    }
+
+    @media screen and (min-width: 1024px) {
+      background-image: linear-gradient(
+          to right,
+          rgba(0, 0, 0, 0.56),
+          rgba(0, 0, 0, 0.56)
+        ),
+        url(../images/hero-home.jpg);
+    }
+  }
   &__container {
     position: relative;
     width: 320px;
@@ -36,34 +65,7 @@
     }
   }
 
-  &__home-bg {
-    background-image: linear-gradient(
-        to right,
-        rgba(0, 0, 0, 0.56),
-        rgba(0, 0, 0, 0.56)
-      ),
-      url(../images/hero-home-mobile.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-
-    @media screen and (min-width: 768px) {
-      background-image: linear-gradient(
-          to right,
-          rgba(0, 0, 0, 0.56),
-          rgba(0, 0, 0, 0.56)
-        ),
-        url(../images/hero-home-tablet.jpg);
-    }
-
-    @media screen and (min-width: 1024px) {
-      background-image: linear-gradient(
-          to right,
-          rgba(0, 0, 0, 0.56),
-          rgba(0, 0, 0, 0.56)
-        ),
-        url(../images/hero-home.jpg);
-    }
-  }
+  
 
   &__library-bg {
     background-image: linear-gradient(
