--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -8,6 +8,7 @@
   line-height: normal;
   text-align: center;
   font-size: 0;
+  margin-top: 60px;
 
   @media screen and (max-width: 767px) {
     display: flex;
