--- a/src/sass/components/home-page.scss
+++ b/src/sass/components/home-page.scss
@@ -1,36 +1,31 @@
-.container {
-  padding-right: 20px;
-  padding-left: 20px;
-  margin: 0 auto;
+.card-movies {
+ padding-top:20px;
+  padding-bottom: 40px;
 
-  @media screen and (min-width: 320px) {
-    width: 320px;
-  }
+
 
   @media screen and (min-width: 768px) {
-    padding-right: 32px;
-    padding-left: 32px;
-    width: 768px;
+    padding-top: 60px;
+    padding-bottom: 60px;
   }
 
-  @media screen and (min-width: 1024px) {
-    width: 1024px;
-  }
+  // @media screen and (min-width: 1024px) {
+  //   width: 1024px;
+  // }
 }
 
 .gallery {
   display:flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding-top:20px;
-  padding-bottom: 40px;
-
+  margin-bottom: -32px;
+}
+.card-list{
+  margin-bottom: 20px;
   @media screen and (min-width: 768px) {
-    padding-top: 60px;
-    padding-bottom: 60px;
+     margin-bottom: 32px;
   }
 }
-
 .post{
   text-decoration: none;
   color: inherit;
@@ -44,17 +39,7 @@
 .photo-card {
   background-color: #fff;
   border-radius: 10px;
-  // box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
-  transition: transform 250ms linear;
-  cursor: pointer;
-}
-
-.photo-card:hover {
-  transform: scale(1.07);
-}
-
-.thumb {
-  width: 280px;
+    width: 280px;
  
   object-fit: cover;
      @media screen and (min-width: 768px) {
@@ -65,7 +50,28 @@
        
         width: 309px;
     }
+  // box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  transition: transform 250ms linear;
+  cursor: pointer;
 }
+
+.photo-card:hover {
+  transform: scale(1.07);
+}
+
+// .thumb {
+//   width: 280px;
+ 
+//   object-fit: cover;
+//      @media screen and (min-width: 768px) {
+       
+//         width: 336px;
+//     }
+//        @media screen and (min-width: 1024px) {
+       
+//         width: 309px;
+//     }
+// }
 
 .poster {
   width: 100%;
