--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -54,6 +54,11 @@ footer {
   color: #ff6b08;
 }
 
+.footer-modal{
+  width: 500px;
+  height: 500px;
+  background-color: $accent-color;
+}
 // .footer__modal--basis {
 //   position: fixed;
 //   top: 0;
