--- a/src/sass/components/modal-card.scss
+++ b/src/sass/components/modal-card.scss
@@ -3,7 +3,6 @@
   height: 558px;
 
   display: flex;
-  //background-color: $accent-color;
   background-color: white;
   padding: 40px 16px 40px 16px;
 }
@@ -23,6 +22,7 @@
   margin-bottom: 8px;
 }
 .current-movie__votes-data {
+  //margin-bottom: 8px;
   //margin-bottom: 8px;
 }
 .current-movie__popularity {
