--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -34,6 +34,7 @@ footer {
 
   @media screen and (max-width: 767px) {
     margin-top: 10px;
+    align-items: center;
   }
 }
 .footer__item {
@@ -41,52 +42,40 @@ footer {
   margin-left: 10px;
   margin-right: 10px;
 }
-.footer__modal {
+.footer__link {
   padding-left: 10px;
   color: #545454;
   cursor: pointer;
   text-decoration: underline;
 }
-.footer__modal:hover {
+.footer__link:hover {
   color: #ff6b08;
 }
-.footer__modal:focus {
+.footer__link:focus {
   color: #ff6b08;
 }
 
-.footer-modal{
-  width: 500px;
-  height: 500px;
-  background-color: $accent-color;
+.footer-modal {
+  // width: 500px;
+  // height: 500px;
+  background-color: #f7f7f7;
+  padding: 30px;
 }
-// .footer__modal--basis {
-//   position: fixed;
-//   top: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 100%;
-//   background: rgba(0, 0, 0, 0.6);
-//   z-index: 2;
-//   opacity: 1;
-//   overflow-y: scroll;
-// }
-// .footer__modal--container {
-//   display: flex;
-//   width: 100%;
-//   height: 100%;
-//   // background: #545454;
-//   position: absolute;
-//   bottom: 90px;
-//   left: 50%;
-//   transform: translate(-50%);
-//   border-radius: 10px;
-// }
-// .footer__modal--body {
-//   margin: auto;
-//   width: 500px;
-//   background-color: #f7f7f7;
-//   border-radius: 10px;
-//   text-align: center;
-//   padding: 100px 15px 110px 15px;
-//   position: relative;
-// }
+.footer-team__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.footer-team__item {
+  border: 1px solid #545454;
+  margin-bottom: 10px;
+  min-width: 150px;
+  min-height: 200px;
+}
+.footer-team__pic {
+  width: 100%;
+}
+.footer-team__name {
+  cursor: pointer;
+  color: #ff6b08;
+}
