--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -13,7 +13,7 @@
 @import './components/footer';
 @import './components/pagination';
 @import './components/up-btn.scss';
-
+@import './components/warning';
 // @import './components/my-render';
 
 @import './components/my-render';
