--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -276,6 +276,7 @@
 .incorrect__input {
   position: absolute;
   color: #ff001b;
+  // color: transparent;
   width: 120%;
   top: 200%;
   left: 50%;
