add ganres backend
delete files:
oleg.js
fix.js
genres.json

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -35,7 +35,7 @@
         type="text"
         name="searchQuery"
         autocomplete="off"
-        placeholder="Search films"
+        placeholder="Search films or genres"
       />
       <span class="incorrect__input is-hidden"
         >Search result not successful. Enter the correct movie name</span
