--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -56,10 +56,16 @@ footer {
 }
 
 .footer-modal {
-  // width: 500px;
-  // height: 500px;
+  position: relative;
   background-color: #f7f7f7;
+  // background: url(../images/ukr-flag.jpeg);
+  // background-repeat: no-repeat;
+  // background-size: cover;
   padding: 30px;
+  overflow: auto;
+  @media screen and (min-width: 768px) {
+    width: 600px;
+  }
 }
 .footer-team__list {
   display: flex;
@@ -67,15 +73,62 @@ footer {
   justify-content: space-between;
 }
 .footer-team__item {
+  background-color: #f7f7f7;
   border: 1px solid #545454;
   margin-bottom: 10px;
   min-width: 150px;
   min-height: 200px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .footer-team__pic {
-  width: 100%;
+  max-width: 100%;
+  // height: 65%;
+}
+.footer-team__crew {
+  justify-content: center;
 }
 .footer-team__name {
-  cursor: pointer;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.2;
+  text-align: center;
   color: #ff6b08;
+}
+.footer-team__prof {
+  font-size: 16px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+.footer-team__media-social {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.footer-team__media-zone {
+  display: block;
+}
+.footer-team__media-zone:not(:last-child) {
+  margin-right: 5px;
+}
+.footer-team__media-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background-color: #fff;
+  color: #757575;
+}
+.footer-team__media-icon {
+  cursor: pointer;
+  width: 28px;
+  height: 28px;
+
+  fill: currentColor;
 }
