adds genres and votes

--- a/src/sass/components/libruary-page.scss
+++ b/src/sass/components/libruary-page.scss
@@ -116,3 +116,10 @@
 .js-is-hidden{
     display: none;
 }
+.film__vote{
+    padding-left: 5px;
+    padding-right: 8px;
+    background-color: #ff6b08;
+    border-radius: 5px;
+    color: #fff;
+}
