--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -56,8 +56,32 @@
         />
       </button>
     </form>
+<!-- <div class="ganres__box">
+<button class="ganres__button" type="button" data-open-products>Ganres</button>
+   <ul class="ganres__list" data-modal-products>
+        <li class="ganres__item"><a class="ganres__link" data-name="Action">Action</a></li>
+        <li class="ganres__item"><a class="ganres__link" data-name="Adventure">Adventure</a></li>
+        <li class="ganres__item"><a class="ganres__link" data-name="Animation">Animation</a></li>
+        <li class="ganres__item"><a class="ganres__link" data-name="Comedy">Comedy</a></li>
+        <li class="ganres__item"><a class="ganres__link" data-name="Crime">Crime</a></li>
+        <li class="ganres__item"><a class="ganres__link" data-name="Documentary">Documentary</a></li>
+        <li class="ganres__item"><a class="ganres__link" data-name="Drama">Drama</a></li>
+        <li class="ganres__item"><a class="ganres__link" data-name="Family">Family</a></li>
+        <li class="ganres__item"><a class="ganres__link" data-name="Fantasy">Fantasy</a></li>
+        <li class="ganres__item"><a class="ganres__link" data-name="History">History</a></li>
+        <li class="ganres__item"><a class="ganres__link" data-name="Horror">Horror</a></li>
+        <li class="ganres__item"><a class="ganres__link" data-name="Music">Music</a></li>
+        <li class="ganres__item"><a class="ganres__link" data-name="Mystery">Mystery</a></li>
+        <li class="ganres__item"><a class="ganres__link" data-name="Romance">Romance</a></li>
+        <li class="ganres__item"><a class="ganres__link" data-name="Science Fiction">Science Fiction</a></li>
+        <li class="ganres__item"><a class="ganres__link" data-name="TV Movie">TV Movie</a></li>
+        <li class="ganres__item"><a class="ganres__link" data-name="Thriller">Thriller</a></li>
+        <li class="ganres__item"><a class="ganres__link" data-name="War">War</a></li>
+        <li class="ganres__item"><a class="ganres__link" data-name="Western">Western</a></li>
+   </ul>
+</div> -->
 
-    <!-- Header Library Buttons -->
+<!-- Header Library Buttons -->
     <ul class="js-librari-list library is-hidden">
       <li class="library__item">
         <button
