--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,6 +3,7 @@
 @import './base/base';
 @import './utils/variables';
 @import './components/_header.scss';
+@import './components/ganres';
 @import './components/home-page.scss';
 @import './components/libruary-page.scss';
 @import './components/search-film.scss';
