--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -41,7 +41,7 @@
         type="text"
         name="searchQuery"
         autocomplete="off"
-        placeholder="Search films or genres"
+        placeholder="Enter the name of the movie "
       />
       <span class="incorrect__input is-hidden"
         >Search result not successful. Enter the correct movie name</span
@@ -56,7 +56,7 @@
         />
       </button>
     </form>
-<!-- <div class="ganres__box">
+<div class="ganres__box">
 <button class="ganres__button" type="button" data-open-products>Ganres</button>
    <ul class="ganres__list" data-modal-products>
         <li class="ganres__item"><a class="ganres__link" data-name="Action">Action</a></li>
@@ -79,7 +79,7 @@
         <li class="ganres__item"><a class="ganres__link" data-name="War">War</a></li>
         <li class="ganres__item"><a class="ganres__link" data-name="Western">Western</a></li>
    </ul>
-</div> -->
+</div>
 
 <!-- Header Library Buttons -->
     <ul class="js-librari-list library is-hidden">
