--- a/src/sass/components/modal-card.scss
+++ b/src/sass/components/modal-card.scss
@@ -1,21 +1,20 @@
 .current-movie {
   background-color: white;
-
-  width: 280px;
-  //height: 940px;
+  @media screen and (max-width: 767px) {
+    width: 90vw;
+height: 98vh;
+  }
   padding: 40px 20px 40px 20px;
 
   @media screen and (min-width: 768px) {
     display: flex;
     width: 704px;
-    //height: 552px;
-    padding: 40px 16px 40px 16px;
+    padding: 40px 36px;
   }
 
   @media screen and (min-width: 1024px) {
     width: 814px;
-    //height: 558px;
-    padding: 40px 72px 40px 36px;
+    padding: 40px 16px;
   }
 }
 
@@ -23,30 +22,28 @@
   position: absolute;
   top: 8px;
   right: 8px;
-
-  //@include display_align-item(flex, center);
+  cursor: pointer;
+background-image: url(../images/closest.svg);
+background-repeat: no-repeat;
+background-size:cover;
   justify-content: center;
-
   width: 30px;
   height: 30px;
-
   padding: 0;
-
   border-radius: 50%;
   border: 1px solid;
   border-color: rgba(0, 0, 0, 0.1);
-  //background-color: $white-color;
+ 
 }
 
 .current-movie__img {
-  height: 375px;
-  margin-bottom: 20px;
+  width: 100%;
   @media screen and (min-width: 768px) {
-    height: 373.55px;
+    width:264px;
   }
 
   @media screen and (min-width: 1024px) {
-    height: 478px;
+    width: 375px;
   }
 }
 
@@ -59,15 +56,64 @@
     margin-left: 16px;
   }
 }
-
+.info__box{
+  display: flex;
+}
+.info__name{
+   width:100px;
+      @media screen and (min-width: 768px) {
+    width:120px;
+  }
+    @media screen and (min-width: 1024px) {
+    width:100px;
+  }
+}
+.info__value{
+   margin-left: 35px;
+  @media screen and (min-width: 1024px) {
+    margin-left: 75px;
+    width:200px;
+  }
+}
 .current-movie__title {
   margin-bottom: 20px;
   text-transform: uppercase;
+  font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 20px;
+line-height: 1.15;
+@media screen and (min-width: 1024px) {
+    font-size: 30px;
+line-height: 1.17;
+  }
+  @media screen and (max-width: 767px) {
+    margin-top: 20px;
+  }
 }
-.current-movie__votes {
-  margin-bottom: 8px;
+.current-movie__name{
   color: #8c8c8c;
+  font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 12px;
+line-height: 1.33;
 }
+.current-movie__name:not(:last-child){
+    margin-bottom: 8px;
+}
+.info__item{
+   color: #000000;
+     font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 12px;
+  line-height: 1.33; 
+}
+.info__item:not(:last-child){
+  margin-bottom: 8px;
+}
+
 
 .current-movie__vote-data {
   padding-left: 5px;
@@ -75,90 +121,39 @@
   background-color: #ff6b08;
   border-radius: 5px;
   color: #fff;
-  margin-left: 41px;
-  @media screen and (min-width: 1024px) {
-    margin-left: 85px;
-  }
-}
-.current-movie__votes-data {
-  //margin-bottom: 8px;
-  //margin-bottom: 8px;
-  color: #000000;
 }
 
-.current-movie__popularity {
-  margin-bottom: 8px;
-  color: #8c8c8c;
-}
-.current-movie__popularity-data {
-  //margin-bottom: 8px;
-  color: #000000;
-  margin-left: 55px;
-  @media screen and (min-width: 1024px) {
-    margin-left: 97px;
-  }
-}
-.current-movie__original-title {
-  margin-bottom: 8px;
-  color: #8c8c8c;
-}
-.current-movie__original-title-data {
-  color: #000000;
-  text-transform: uppercase;
-  margin-left: 39px;
-  @media screen and (min-width: 1024px) {
-    margin-left: 83px;
-  }
-}
-.current-movie__genre {
-  margin-bottom: 20px;
-  color: #8c8c8c;
-}
-.current-movie__genre-data {
-  color: #000000;
-  margin-left: 85px;
-  @media screen and (min-width: 1024px) {
-    margin-left: 120px;
-  }
-}
 .current-movie__about-section {
+  margin-top:20px;
+   margin-bottom: 20px;
 }
 .current-movie__about {
+  font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 12px;
+line-height: 1.33;
   margin-bottom: 8px;
   text-transform: uppercase;
 }
 .current-movie__about-data {
-  margin-bottom: 20px;
+  font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 12px;
+line-height: 1.67;
 }
 .current-movie__btn-container {
   display: flex;
-  @media screen and (min-width: 768px) {
-    //height: 373.55px;
-  }
-
-  @media screen and (min-width: 1024px) {
-    // height: 478px;
-  }
 }
 .current-movie_btn-add-to-watched {
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 16px;
-  background: #ff6b01;
-  color: #fff;
-  border-radius: 5px;
-
-  justify-content: center;
-  text-transform: uppercase;
-
   @media screen and (min-width: 1024px) {
-    //padding-top: 14px;
-    //padding-bottom: 12px;
     margin-left: 34px;
   }
 }
-.current-movie_btn-add-to-queue {
-  margin-left: 15px;
+
+.btn{
+    margin-left: 15px;
   font-weight: 500;
   font-size: 12px;
   line-height: 16px;
@@ -169,8 +164,22 @@
   justify-content: center;
   text-transform: uppercase;
   margin-left: 20px;
-
+  cursor: pointer;
+  transition: background-color 250ms linear,color 250ms linear;
   @media screen and (min-width: 768px) {
     margin-left: 15px;
+  }
+  &:hover,
+  &:focus,
+  &:active{
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  background-color: #ff6b01;
+  color: #fff;
+  border-radius: 5px;
+
+  justify-content: center;
+  text-transform: uppercase;
   }
 }
