--- a/src/sass/components/modal-card.scss
+++ b/src/sass/components/modal-card.scss
@@ -33,7 +33,12 @@ background-size:cover;
   border-radius: 50%;
   border: 1px solid;
   border-color: rgba(0, 0, 0, 0.1);
- 
+  transition:background-color 250ms linear,box-shadow 250ms linear;
+ &:hover,
+ &:focus{
+  background-color:white;
+  box-shadow      : 0px 4px 4px rgba(0, 0, 0, 0.15);
+ }
 }
 
 .current-movie__img {
