--- a/src/sass/components/_ganres.scss
+++ b/src/sass/components/_ganres.scss
@@ -65,17 +65,21 @@ transition: opacity 300ms linear;
     transform: scaleX(0);
     transition: transform 300ms linear;
 }
-&active:hover,
-&active:focus,
-&active:active,
-&active:visited {
-    transform: scaleX(1);
-    opacity: 1;}
+
 }
-// .active{
-//      transform: scaleX(1);
-//      opacity: 1;
-// }
+// .active:hover,
+// .active:focus,
+// .active:active,
+// .active:visited {
+//     transform: scaleX(1);
+//       &::after {
+//         transform: scaleX(1);
+//     }}
+.active{
+     &::after {
+        transform: scaleX(1);
+    }
+}
 .ganres__button {
 position: absolute;
 top: -30px;
