--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -25,10 +25,10 @@
         <li class="nav__item nav_my-library is-hidden">
           <a data-link="library" href="" class="nav__link">My library</a>
         </li>
-        <li class="nav__item nav__login is-hidden">
+        <li class="nav__item nav__login">
           <a data-link="login" href="" class="nav__link">Login</a>
         </li>
-        <li class="nav__item nav__logout is-hidden">
+        <li class="nav__item nav__logout">
           <a data-link="logout" href="" class="nav__link">Logout</a>
         </li>
       </ul>
