--- a/src/sass/components/modal-card.scss
+++ b/src/sass/components/modal-card.scss
@@ -1,8 +1,9 @@
 .current-movie {
   background-color: white;
   @media screen and (max-width: 767px) {
-    width: 90vw;
-height: 98vh;
+width: 90vw;
+height: 100%;
+margin-top:50px;
   }
   padding: 40px 20px 40px 20px;
 
@@ -19,6 +20,10 @@ height: 98vh;
 }
 
 .modal__close-button-cm {
+    @media screen and (max-width: 767px) {
+
+ top: 58px;
+  }
   position: absolute;
   top: 8px;
   right: 8px;
@@ -65,7 +70,7 @@ background-size:cover;
   display: flex;
 }
 .info__name{
-   width:100px;
+   width:150px;
       @media screen and (min-width: 768px) {
     width:120px;
   }
@@ -186,5 +191,10 @@ line-height: 1.67;
 
   justify-content: center;
   text-transform: uppercase;
+  }
+}
+.basicLightbox__placexolder{
+  @media screen and (max-width: 767px) {
+   overflow-y:scroll;
   }
 }
