--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -6,6 +6,9 @@ a {
     &.is-open {
       overflow: hidden;
     }
+      @media screen and (max-width: 767px) {
+   overflow-y:auto;
+  }
   }
   text-decoration: none;
 }
