--- a/src/sass/components/modal-card.scss
+++ b/src/sass/components/modal-card.scss
@@ -2,8 +2,8 @@
   background-color: white;
   @media screen and (max-width: 767px) {
 width: 90vw;
-height: 100%;
-margin-top:50px;
+// height: 100%;
+// margin-top:60px;
   }
   padding: 40px 20px 40px 20px;
 
@@ -20,10 +20,10 @@ margin-top:50px;
 }
 
 .modal__close-button-cm {
-    @media screen and (max-width: 767px) {
+//     @media screen and (max-width: 767px) {
 
- top: 58px;
-  }
+//  top: 68px;
+//   }
   position: absolute;
   top: 8px;
   right: 8px;
@@ -70,7 +70,7 @@ background-size:cover;
   display: flex;
 }
 .info__name{
-   width:150px;
+   width:130px;
       @media screen and (min-width: 768px) {
     width:120px;
   }
@@ -193,8 +193,17 @@ line-height: 1.67;
   text-transform: uppercase;
   }
 }
-.basicLightbox__placexolder{
+.basicLightbox{
   @media screen and (max-width: 767px) {
-   overflow-y:scroll;
+    margin-top: 30px;
+    padding-top: 150px;
+   height: 98vh; 
+   overflow-y: auto,
   }
 }
+// .is-open{
+//   @media screen and (max-width: 767px) {
+//    height: 98vh; 
+//    overflow-y: auto,
+//   }
+// }
