--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -254,9 +254,13 @@
     background-color: transparent;
     border: 1px solid white;
     border-radius: 5px;
-
+transition: background-color 250ms linear,border-color 250ms linear;
     cursor: pointer;
-
+&:hover,
+&:focus{
+   background-color: #ff6b08;
+  border-color: #ff6b08;
+}
     @media screen and (min-width: 768px) {
       width: 152px;
       height: 44px;
@@ -265,8 +269,7 @@
 }
 
 .active-btn {
-  background-color: #ff6b08;
-  border-color: #ff6b08;
+ 
 }
 
 .is-hidden {
