--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="js-header header" id="home">
   <h1 hidden>Filmoteka</h1>
   <section
-    class="js-header-container header__container header__home-padding header__home-bg"
+    class="js-header-container header__container header__home-padding header__home-bg container"
   >
     <!-- Dark theme component -->
     <include src="./partials/dark-theme.html"></include>
