--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -31,7 +31,7 @@
   }
   &__container {
     position: relative;
-    width: 320px;
+    // width: 320px;
     margin: 0 auto;
     padding-top: 44px;
     padding-left: 20px;
@@ -53,6 +53,7 @@
 
     @media screen and (min-width: 768px) {
       padding-bottom: 80px;
+      
     }
   }
 
@@ -175,6 +176,7 @@
 }
 
 .form {
+  max-width: 100%;
   position: relative;
   display: flex;
   justify-content: space-between;
