--- a/src/sass/components/libruary-page.scss
+++ b/src/sass/components/libruary-page.scss
@@ -1,31 +1,49 @@
 .films__library__page{
-    display:flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-bottom: -32px;
-    padding-top: 20px;
-        padding-bottom: 40px;
-    
-    
-    
-        @media screen and (min-width: 768px) {
-            padding-top: 60px;
-            padding-bottom: 60px;
-        }
+padding-top:20px;
+padding-bottom: 40px;
+// display:none;
+  @media screen and (min-width: 768px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
     
         // @media screen and (min-width: 1024px) {
         //   width: 1024px;
         // }
     
 }
+.gallery {
+  display:flex;
+  flex-wrap: wrap;
+ 
+  @media screen and (min-width: 768px) {
+  margin-top: -32px;  
+  margin-left: -32px;
+  }
+@media screen and (min-width: 1024px) {
+  
+  margin-left: -17px;
+  }
+}
 .film__picture{
-    width:280px;
+    // width:280px;
 }
 .films__list{
-    margin-bottom: 20px;
-        @media screen and (min-width: 768px) {
-            margin-bottom: 32px;
-        }
+  width:100%;
+  @media screen and (min-width: 768px) {
+  margin-top: 32px;
+  width:calc((100% - 64px)/2);
+  margin-left: 32px;
+  }
+  
+  @media screen and (min-width: 1024px) {
+  margin-top: 32px;
+  width:calc((100% - 51px)/3);
+  margin-left: 17px;
+  }
+}
+.films__list:not(:last-child){
+margin-bottom:20px;
 }
 .films-id{text-decoration: none;
     color: inherit;
@@ -38,19 +56,19 @@
 }
 .film__photo__card{background-color: #fff;
     border-radius: 10px;
-    width: 280px;
+    // width: 280px;
 
     object-fit: cover;
 
-    @media screen and (min-width: 768px) {
+    // @media screen and (min-width: 768px) {
 
-        width: 336px;
-    }
+    //     width: 336px;
+    // }
 
-    @media screen and (min-width: 1024px) {
+    // @media screen and (min-width: 1024px) {
 
-        width: 309px;
-    }
+    //     width: 309px;
+    // }
 
     // box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
     transition: transform 250ms linear;
