--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -76,25 +76,40 @@ footer {
   background-color: #f7f7f7;
   border: 1px solid #545454;
   margin-bottom: 10px;
-  min-width: 150px;
-  min-height: 200px;
+  width: 150px;
+  height: 200px;
+  // box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+  //   0px 2px 1px rgba(0, 0, 0, 0.2);
+  // border-radius: 0px 0px 4px 4px;
+}
+.footer-team__item:hover {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 .footer-team__pic {
-  max-width: 100%;
-  // height: 65%;
+  width: 100%;
+  height: 70%;
 }
 .footer-team__crew {
   justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-top: 7px;
 }
 .footer-team__name {
+  cursor: pointer;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.2;
   text-align: center;
   color: #ff6b08;
+}
+.footer-team__name:hover {
+  text-decoration: underline;
+}
+.footer-team__name:focus {
+  text-decoration: underline;
 }
 .footer-team__prof {
   font-size: 16px;
@@ -103,32 +118,32 @@ footer {
   letter-spacing: 0.03em;
   color: #757575;
 }
-.footer-team__media-social {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.footer-team__media-zone {
-  display: block;
-}
-.footer-team__media-zone:not(:last-child) {
-  margin-right: 5px;
-}
-.footer-team__media-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
-  background-color: #fff;
-  color: #757575;
-}
-.footer-team__media-icon {
-  cursor: pointer;
-  width: 28px;
-  height: 28px;
+// .footer-team__media-social {
+//   width: 100%;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+// }
+// .footer-team__media-zone {
+//   display: block;
+// }
+// .footer-team__media-zone:not(:last-child) {
+//   margin-right: 5px;
+// }
+// .footer-team__media-link {
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   width: 32px;
+//   height: 32px;
+//   border-radius: 50%;
+//   background-color: #fff;
+//   color: #757575;
+// }
+// .footer-team__media-icon {
+//   cursor: pointer;
+//   width: 28px;
+//   height: 28px;
 
-  fill: currentColor;
-}
+//   fill: currentColor;
+// }
