--- a/src/sass/components/modal-card.scss
+++ b/src/sass/components/modal-card.scss
@@ -72,7 +72,10 @@ background-size:cover;
   }
 }
 .info__value{
-   margin-left: 35px;
+   @media screen and (min-width: 768px) {
+    margin-left: 35px;
+    width:200px;
+  }
   @media screen and (min-width: 1024px) {
     margin-left: 75px;
     width:200px;
