--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -67,7 +67,7 @@ footer {
 .footer-team__list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .footer-team__item {
   background-color: #f7f7f7;
@@ -75,6 +75,9 @@ footer {
   margin-bottom: 10px;
   width: 150px;
   height: 200px;
+   @media screen and (min-width: 768px) {
+     width: 160px;
+  }
   // box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
   //   0px 2px 1px rgba(0, 0, 0, 0.2);
   // border-radius: 0px 0px 4px 4px;
@@ -143,12 +146,12 @@ footer {
 //   height: 28px;
 
 
-  fill: currentColor;
+  // fill: currentColor;
 
 .basicLightbox{
   @media screen and (max-width: 767px) {
     margin-top: 15px;
-    padding-top: 240px;
+    padding-top: 1000px;
    height: 95vh; 
    overflow-y: auto,
   }
