--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -149,11 +149,11 @@ footer {
   // fill: currentColor;
 
 .basicLightbox{
-  @media screen and (max-width: 767px) {
-    margin-top: 15px;
-    padding-top: 1000px;
-   height: 95vh; 
-   overflow-y: auto,
-  }
+  // @media screen and (max-width: 767px) {
+  //   margin-top: 15px;
+  //   padding-top: 1000px;
+  //  height: 95vh; 
+  //  overflow-y: auto,
+  // }
 }
 
