--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -57,15 +57,41 @@ footer {
 
 .footer-modal {
 @media screen and (max-width: 767px) {
-    top: 530px;
+    top: 360px;
+    width: 80vw;
   }
+ 
   position: relative;
   background-color: #f7f7f7;
   padding: 30px;
   overflow: auto;
   @media screen and (min-width: 768px) {
     width: 600px;
+    padding-top: 15px;
+    padding-bottom: 15px;
   }
+}
+.modal__close-button-cm {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  cursor: pointer;
+background-image: url(../images/closest.svg);
+background-repeat: no-repeat;
+background-size:cover;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  padding: 0;
+  border-radius: 50%;
+  border: 1px solid;
+  border-color: rgba(0, 0, 0, 0.1);
+  transition:background-color 250ms linear,box-shadow 250ms linear;
+ &:hover,
+ &:focus{
+  background-color:white;
+  box-shadow      : 0px 4px 4px rgba(0, 0, 0, 0.15);
+ }
 }
 .footer-team__list {
   display: flex;
@@ -77,7 +103,7 @@ footer {
   border: 1px solid #545454;
   margin-bottom: 10px;
   width: 150px;
-  height: 200px;
+transition: box-shadow 250ms linear, border-radius 250ms linear;
    @media screen and (min-width: 768px) {
      width: 160px;
   }
@@ -89,13 +115,14 @@ footer {
 }
 .footer-team__pic {
   width: 100%;
-  height: 70%;
+  height: 65%;
 }
 .footer-team__crew {
   justify-content: center;
   align-items: center;
   text-align: center;
-  padding-top: 7px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 .footer-team__name {
   cursor: pointer;
