feater/footer/lastfexed

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -123,3 +123,9 @@ footer {
   letter-spacing: 0.03em;
   color: #757575;
 }
+.footer-team__prof:hover {
+  text-decoration: underline;
+}
+.footer-team__prof:focus {
+  text-decoration: underline;
+}
