--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -64,7 +64,7 @@ footer {
   position: relative;
   background-color: #f7f7f7;
   padding: 30px;
-  overflow: auto;
+  overflow: auto;}
   @media screen and (min-width: 768px) {
     width: 600px;
     padding-top: 15px;
