--- a/src/partials/dark-theme.html
+++ b/src/partials/dark-theme.html
@@ -1,5 +1,6 @@
 <div class="theme">
   <input type="checkbox" class="theme__checkbox" id="checkbox" />
+  <div class="theme__user-name"></div>
   <label for="checkbox" class="theme__label">
     <i class="fas fa-moon"></i>
     <i class="fas fa-sun"></i>
