--- a/src/sass/components/_dark-theme.scss
+++ b/src/sass/components/_dark-theme.scss
@@ -11,6 +11,10 @@ $secondaryDarkTextColor: #ffffff;
   display: flex;
   justify-content: end;
 
+  &__user-name {
+    color: $secondaryDarkTextColor;
+  }
+
   &__checkbox {
     opacity: 0;
     visibility: hidden;
