--- a/src/partials/dark-theme.html
+++ b/src/partials/dark-theme.html
@@ -1,6 +1,7 @@
 <div class="theme">
+  <div class="theme__user-name is-hidden"></div>
+
   <input type="checkbox" class="theme__checkbox" id="checkbox" />
-  <div class="theme__user-name"></div>
   <label for="checkbox" class="theme__label">
     <i class="fas fa-moon"></i>
     <i class="fas fa-sun"></i>
