--- a/src/sass/components/_dark-theme.scss
+++ b/src/sass/components/_dark-theme.scss
@@ -7,12 +7,20 @@ $secondaryDarkTextColor: #ffffff;
   box-sizing: border-box;
   position: absolute;
   right: 5px;
-  top: 5px;
+  top: 7px;
   display: flex;
   justify-content: end;
+  align-items: center;
 
   &__user-name {
     color: $secondaryDarkTextColor;
+    font-size: 12px;
+    line-height: 1.2;
+    letter-spacing: 1.04;
+    font-weight: 400;
+
+    // margin-top: 6px;
+    margin-right: 20px;
   }
 
   &__checkbox {
@@ -73,6 +81,10 @@ fa-sun {
 body.dark {
   & .header {
     background-color: $secondaryDarkBgColor;
+  }
+
+  & .theme__user-name {
+    color: $primaryDarkTextColor;
   }
 
   & .main {
