--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -271,7 +271,8 @@ transition: background-color 250ms linear,border-color 250ms linear;
 }
 
 .active-btn {
- 
+  background-color: #ff6b08;
+  border-color: #ff6b08;
 }
 
 .is-hidden {
