modal button disable/enable

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -279,6 +279,10 @@ transition: background-color 250ms linear,border-color 250ms linear;
   display: none;
 }
 
+.disabled {
+  
+}
+
 .incorrect__input {
   position: absolute;
   color: transparent;
