--- a/src/partials/home-page.html
+++ b/src/partials/home-page.html
@@ -1,7 +1,7 @@
 
 <section class="card-movies container">
 
-    <ul class="gallery"></ul> 
+    <ul class="gallery libruary"></ul> 
     <div id="tui-pagination-container" class="tui-pagination"></div>
 
 </section>
