--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <div class="container__footer container">
-    <p class="footer__rights">© 2020 | All Rights Reserved |</p>
+    <p class="footer__rights">© 2020 | All Rights Reserved |&nbsp;</p>
     <div class="footer__group">
       <p class="footer__rights">Developed with</p>
       <img
